--- a/src/components/VerticalSectionOverflow/styles.scss
+++ b/src/components/VerticalSectionOverflow/styles.scss
@@ -37,6 +37,7 @@
 
     &:focus {
         outline: 0;
+        background-color: $color-gray-1;
     }
 }
 
